--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,6 @@
 
 # .env, local config
 .env
-.env-*
 config/local*
 
 # build, dist, temp, cache, archive, backup
@@ -39,8 +38,9 @@ cache/
 /archive/
 /[._]archive/
 
-#TLS
+# TLS
 tls/production/*
+certs/*
 
 # files, archives
 # *.csv
@@ -59,6 +59,7 @@ bower_components
 # editors
 .idea
 .vscode
+*.code-workspace
 modules.xml
 *.iml
 *.ipr
